# Example_project_crud

./: docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_06_26_1410-8406d92cfb79_create_tables_user_product.py  2024_06_27_1302-201470011792_create_tables_user_product.py  2024_06_28_1449-a30a812d9d86_create_table_basket.py  2024_07_01_1227-6029f0ecfe94_delete_colomn_all_price_from_basket_.py
api/auth/: __init__.py  views.py
api/basket/: __init__.py  views.py
api/product/: __init__.py  views.py
api/user/: __init__.py  views.py
core/: config.py  db_helper.py
core/auth/: auth_user.py  dependencies.py
core/models/: __init__.py  basket.py  product.py  user.py
core/schemas/: basket.py  product.py  user.py
crud/: basket.py  product.py  user.py
tests/: conftest.py  mock_baskets.json  mock_products.json  mock_users.json
tests/integration_tests/test_user/: test_api.py
